# milner

./: .gitignore  Cargo.toml  Makefile.toml  README.md  SOLE.md
.github/workflows/: ci.yml  docs.yml  release.yml
.milner/: citation-format.md  citations.json  index.md  manifest-schema.md  manifest.json
.milner/summaries/: README_md.md  architecture_decision_corpus_docs_checklists_command_parser_acceptance_md.md  architecture_decision_corpus_docs_checklists_configuration_ergonomics_acceptance_md.md  architecture_decision_corpus_docs_checklists_console_interrupt_policy_acceptance_md.md  architecture_decision_corpus_docs_checklists_execution_policy_resolution_acceptance_md.md  architecture_decision_corpus_docs_checklists_interactive_prompt_acceptance_md.md  architecture_decision_corpus_docs_checklists_job_control_cancellation_acceptance_md.md  architecture_decision_corpus_docs_checklists_job_object_boundary_acceptance_md.md  architecture_decision_corpus_docs_checklists_process_runner_acceptance_md.md  architecture_decision_corpus_docs_checklists_pseudoconsole_readiness_acceptance_md.md  architecture_decision_corpus_docs_checklists_redirection_pipelines_acceptance_md.md  architecture_decision_corpus_docs_checklists_shell_state_builtins_acceptance_md.md  architecture_decision_corpus_docs_design_run_exe_md.md  (+60 more)
docs/: README.md  limitations.md  troubleshooting.md
src/: main.rs
tests/: config_ergonomics.rs  execution_policy.rs  execution_records.rs  foreground_cancellation.rs  prompt_regression.rs  redirection_pipeline.rs  security_regression.rs
xtask/: Cargo.toml
(+25 files in other folders)
