[package]
name = "milner"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Adrian Paredez"]

[dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Console", "Win32_System_JobObjects", "Win32_System_Pipes", "Win32_System_Threading"] }
